# xvad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: xvad.h
sample/: main.c
src/: adapter.c  adapter.h  preprocessor.c  preprocessor.h  xvad.c
src/backends/firered/: README.md  firered_vad.c
src/backends/silero/: README.md  silero_vad.c
src/backends/ten/: ten_vad.c
src/utils/: fbank.c  fbank.h  pitch.c  pitch.h  ringbuf.c  ringbuf.h
